made compatible with jdk 8 and 9 and added readme